--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,6 @@
+button.logout=Login out
+button.sign_in=Sign in
+button.sign_up=Sign Up
 greeting=Hello! Welcome to our website!
 lang.change=Change the language
 lang.eng=English
