Change main page Add reserve page Add custom exception

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,9 @@
+button.order=Reserve
 button.logout=Login out
 button.sign_in=Sign in
 button.sign_up=Sign Up
 greeting=Hello! Welcome to our website!
+greeting.main=Apartments
 lang.change=Change the language
 lang.eng=English
 lang.ua=Ukrainian
@@ -9,6 +11,10 @@ login=Login
 login.error=Invalid username and password.
 login.logout=You have been logged out.
 main=Main Page
+page.title.order=Reserve
+page.room.type=Type of room: 
+page.room.number=Number of room: 
+page.room.capacity=Number of seats in the room: 
 password=Password
 registration=Registration
 registration.title=Registration page
