--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,21 +1,24 @@
 button.order=Reserve
-page.room.date=Date
+page.room.from_date=Start date
+page.room.finish_date=Finish date
 button.logout=Login out
 button.sign_in=Sign in
-button.sign_up=Sign Up
+button.sign_up=Registration
 greeting=Hello! Welcome to our website!
 greeting.main=Apartments
 lang.change=Change the language
 lang.eng=English
 lang.ua=Ukrainian
 login=Login
-login.error=Invalid username and password.
+login.error=Incorrect username or password
+page.title.stat=User application
 login.logout=You have been logged out.
 main=Main Page
 page.title.order=Reserve
 page.room.type=Type of room: 
-page.room.number=Number of room: 
+page.room.number=Number of room:
 page.room.capacity=Number of seats in the room: 
 password=Password
 registration=Registration
 registration.title=Registration page
+button.delete=Delete
