--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,3 +22,7 @@ password=Password
 registration=Registration
 registration.title=Registration page
 button.delete=Delete
+button.statistics=Applications
+button.addCashAccount=Deposit
+button.approve=Approve
+button.no-approve=All applications
